--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.3.5"
+    "express-validator": "^6.14.1",
+    "helmet": "^5.1.0",
+    "mongoose": "^6.3.5",
+    "morgan": "^1.10.0"
   },
   "scripts": {
     "start": "node server.js"
@@ -10,7 +13,6 @@
   "name": "contactapp-api",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/PotstickerNut/contactapp-api.git"
